java 11, clojure 1.10, update other versions