@@ -15,68 +15,72 @@
   <doclint>none</doclint>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   <apfloat-version>1.8.3</apfloat-version>
-  <asm-version>6.2.1</asm-version>
-  <cheshire-version>5.8.0</cheshire-version>
+  <asm-version>7.0</asm-version>
+  <cheshire-version>5.8.1</cheshire-version>
   <clatrix-version>0.5.0</clatrix-version>
   <clj-digest-version>1.4.8</clj-digest-version>
   <clj-tuple-version>0.2.2</clj-tuple-version>
-  <clojure-version>1.9.0</clojure-version>
-  <clojure-core-async-version>0.4.474</clojure-core-async-version>
+  <!-- <clojure-version>1.9.0</clojure-version> -->
+  <clojure-version>1.10.0</clojure-version>
+  <clojure-core-async-version>0.4.490</clojure-core-async-version>
   <clojure-maven-version>1.8.1</clojure-maven-version>
   <clojure.vmargs>-ea -dsa</clojure.vmargs>
   <clojure.options>-ea -dsa -Dclojure.compiler.direct-linking=true</clojure.options>
-  <clojurecl-version>0.10.3</clojurecl-version>
+  <clojurecl-version>0.10.4</clojurecl-version>
   <commons-compress-version>1.18</commons-compress-version>
-  <commons-lang3-version>3.8</commons-lang3-version>
+  <commons-lang3-version>3.8.1</commons-lang3-version>
   <commons-math3-version>3.6.1</commons-math3-version>
   <commons-rng-version>1.1</commons-rng-version>
   <!-- commons-statistics-version>1.0</commons-statistics-version -->
-  <codox-version>0.10.4</codox-version>
+  <codox-version>0.10.5</codox-version>
   <criterium-version>0.4.4</criterium-version>
   <doclint>none</doclint>
   <eclipse-collections-version>9.2.0</eclipse-collections-version>
   <exif-processor-version>0.2.0</exif-processor-version>
-  <fastutil-version>8.2.1</fastutil-version>
-  <fipp-version>0.6.12</fipp-version>
+  <fastutil-version>8.2.2</fastutil-version>
+  <fipp-version>0.6.14</fipp-version>
   <github-url>scm:git:https://github.com/${project.groupId}/${project.artifactId}.git</github-url>
   <graph-maven-version>1.2.3</graph-maven-version>
-  <guava-version>26.0-jre</guava-version>
+  <guava-version>27.0.1-jre</guava-version>
   <hiccup-version>1.0.5</hiccup-version>
   <hppc-version>0.8.1</hppc-version>
-  <java-version>1.10</java-version>
+  <java-version>11</java-version>
   <java-sizeof-version>0.0.5</java-sizeof-version>
-  <jgit-version>5.0.2.201807311906-r</jgit-version>
-  <jcuda-version>0.9.2</jcuda-version>
-  <!--  junit-version>4.12</junit-version -->
-  <junit-jupiter-version>5.3.1</junit-jupiter-version>
-  <junit-platform-version>1.3.1</junit-platform-version>
+  <jgit-version>5.2.0.201812061821-r</jgit-version>
+  <jcuda-version>10.0.0</jcuda-version>
+  <junit-jupiter-version>5.3.2</junit-jupiter-version>
+  <junit-platform-version>1.3.2</junit-platform-version>
+  <jts-version>1.16.0</jts-version>
   <lifecycle-mapping-version>1.0.0</lifecycle-mapping-version>
   <maven-assembly-version>3.1.0</maven-assembly-version>
   <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
   <maven-clean-version>3.1.0</maven-clean-version>
   <maven-compiler-version>3.8.0</maven-compiler-version>
   <maven-dependency-version>3.1.1</maven-dependency-version>
-  <maven-deploy-plugin-version>2.8.2</maven-deploy-plugin-version>
+  <maven-deploy-plugin-version>3.0.0-M1</maven-deploy-plugin-version>
   <maven-enforcer-version>3.0.0-M2</maven-enforcer-version>
   <maven-jar-version>3.1.0</maven-jar-version>
   <maven-javadoc-version>3.0.1</maven-javadoc-version>
   <maven-project-info-reports-version>3.0.0</maven-project-info-reports-version>
   <maven-release-plugin-version>2.5.3</maven-release-plugin-version>
-  <maven-scm-plugin-version>1.10.0</maven-scm-plugin-version>
+  <maven-scm-plugin-version>1.11.0</maven-scm-plugin-version>
   <maven-site-version>3.7.1</maven-site-version>
   <maven-source-plugin-version>3.0.1</maven-source-plugin-version>
-  <maven-surefire-version>2.22.0</maven-surefire-version>
+  <maven-surefire-version>3.0.0-M2</maven-surefire-version>
   <metadata-extractor-version>2.11.0</metadata-extractor-version>
   <neanderthal-version>0.20.4</neanderthal-version>
-  <oshi-version>3.8.0</oshi-version>
+  <oshi-version>3.12.0</oshi-version>
   <pandect-version>0.6.1</pandect-version>
-  <parboiled-java-version>1.1.8</parboiled-java-version>
+  <parboiled-java-version>1.2.0</parboiled-java-version>
   <potemkin-version>0.4.5</potemkin-version>
   <slf4j-version>1.7.25</slf4j-version>
-  <uncommons-maths-version>1.2.3</uncommons-maths-version>
-  <versions-plugin-version>2.5</versions-plugin-version>
-  <xmp-core-version>6.1.10</xmp-core-version>
   <timestamp>${maven.build.timestamp}</timestamp>
+  <uncommons-maths-version>1.2.3</uncommons-maths-version>
+  <versions-plugin-version>2.7</versions-plugin-version>
+  <xmp-core-version>5.1.3</xmp-core-version>
+  <!-- 
+  <xmp-core-version>6.11.0</xmp-core-version>
+   -->
  </properties>
  <!-- TODO: <issueManagement> <system>jira</system> <url>http://issues.apache.org/jira/browse/COMMONSSITE</url> 
   </issueManagement> <ciManagement> <system>jenkins</system> <url>https://builds.apache.org/</url> 
@@ -181,6 +185,10 @@
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>${maven-surefire-version}</version>
+    <configuration>
+    <trimStackTrace>false</trimStackTrace>
+     <argLine>-Xmx2G -XX:MaxPermSize=512M</argLine>
+    </configuration>
     <dependencies>
     <!-- 
      <dependency>
@@ -195,9 +203,6 @@
       <version>${junit-jupiter-version}</version>
      </dependency>
     </dependencies>
-    <configuration>
-    <trimStackTrace>false</trimStackTrace>
-    </configuration>
    </plugin>
    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
